# schools

./: .gitignore  README.md  pyproject.toml
.github/workflows/: auto_deploy.yml  deploy.yml
apps/base/: admin.py  admin_site.py  apps.py  context_processors.py  decorators.py  forms.py  models.py  registry.py  signals.py  urls.py  views.py
apps/base/migrations/: 0001_initial.py
apps/base/registry/: auth.py  home.py  landing.py
apps/base/templatetags/: auth.py  home.py  landing.py  navigation.py  org.py
apps/core/: admin.py  decorators.py  forms.py  models.py  urls.py  views.py
apps/core/config/: urls.py
apps/core/fixtures/: seed_example.json
apps/core/migrations/: 0001_initial.py  0002_base_auto_fill_blanks.py  0002_setup.py  0003_baseimage_description.py
apps/core/templatetags/: base.py  contacts.py  forms.py  urls.py  vendor.py
apps/elearning/: apps.py  registry.py
apps/elearning/docs/: index.md  overview.md  setup_development.md  setup_production.md  system_context.md  system_database_design.md  system_use_cases.md
apps/home/: admin.py  admin_site.py  apps.py  decorators.py  forms.py  models.py  signals.py  urls.py  views.py
apps/home/config/: auth.py  landing.py
apps/home/fixtures/: seed_example.json
apps/home/registry/: auth.py  (+2 more)
apps/landing/: apps.py  urls.py  views.py
apps/schools/: admin.py  apps.py  models.py  registry.py  signals.py
conf/: settings.py  urls.py
core/: settings.py  urls.py
docs/: index.md  overview.md  setup_development.md  setup_production.md  system_context.md  system_database_design.md  system_use_cases.md
(+130 files in other folders)
