[project]
name = "gci-schools"
version = "0.1.0"
description = ""
authors = [
  { name = "Great Commissioners International Media Department", email = "media@gcichurch.org" },
]
readme = "README.md"
requires-python = ">=3.13"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python-decouple = "^3.8"
tzdata = "^2025.2"
pillow = "^11.2.1"
psycopg = {extras = ["binary"], version = "^3.2.9"}
django = "^5.2.2"
django-phonenumber-field = { extras = ["phonenumberslite"], version = "^8.1.0" }
gunicorn = "^23.0.0"
termcolor = "^3.1.0"
libsass = "^0.23.0"
django-sass-processor = "^1.4.1"

[tool.poetry.group.dev.dependencies]
django-browser-reload = "^1.18.0"
djlint = "^1.36.4"

[tool.djlint]
format_css = true
format_js = true
ignore = "T002,H016,H021,H023,H030,H031"

[tool.djlint.css]
indent_size = 2

[tool.djlint.js]
indent_size = 2
